[project]
name = "office-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-distro==0.43b0",
    "streamlit>=1.28.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "python-dotenv>=1.0.0",
    "pip>=25.2",
    "arize-phoenix-otel>=0.13.1",
    "arize-phoenix>=11.34.0",
    "openinference-instrumentation-openai>=0.1.32",
    "faiss-cpu>=1.12.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "langchain-text-splitters>=0.3.11",
]
